Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embark-test-contract",
+  "name": "embark-test-contract-0",
   "version": "0.0.1",
   "author": "Eric Mastro <eric.mastro@gmail.com>",
   "contributors": [],
